@@ -1,4 +1,4 @@
-.\" $Id: libssh2_sftp_seek.3,v 1.1 2007/06/14 16:08:43 jehousley Exp $
+.\" $Id: libssh2_sftp_seek.3,v 1.2 2008/09/29 14:11:30 bagder Exp $
 .\"
 .TH libssh2_sftp_seek 3 "1 Jun 2007" "libssh2 0.15" "libssh2 manual"
 .SH NAME
@@ -9,6 +9,9 @@ libssh2_sftp_seek - set the read/write position indicator within a file
 
 void 
 libssh2_sftp_seek(LIBSSH2_SFTP_HANDLE *handle, size_t offset);
+
+void 
+libssh2_sftp_seek2(LIBSSH2_SFTP_HANDLE *handle, libssh2_uint64_t offset);
 
 .SH DESCRIPTION
 \fIhandle\fP - SFTP File Handle as returned by 
@@ -22,5 +25,7 @@ file access appear more POSIX like. No packets are exchanged with the server
 during a seek operation. The localized file pointer is simply used as a 
 convenience offset during read/write operations.
 
+Note that the \fBlibssh2_sftp_seek2(3)\fP function was added in 0.19 to make it
+possible to seek in large files even on 32bit systems.
 .SH SEE ALSO
 .BR libssh2_sftp_open(3)
